@@ -90,6 +90,7 @@ Version 2.3.0 - The river knows.
 		* Show total upload/download ratio in statistic tree
 		* Fixed category administration in remote gui
 		* Implement directory preferences in remote gui
+		* MSVC build for wxCas
 
 	Vollstrecker:
 		* Unify copyright lines
